Closed Bug 538379 Opened 15 years ago Closed 15 years ago

Leak nsMailboxService in nsMessenger::SaveAttachment

Categories

(MailNews Core :: Attachments, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.1a1

People

(Reporter: ZaneUJi, Assigned: ZaneUJi)

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.3a1pre) Gecko/20100106 SeaMonkey/2.1a1pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.3a1pre) Gecko/20100106 SeaMonkey/2.1a1pre

A pointer to an nsIMsgMessageService interface is defined at
http://mxr.mozilla.org/comm-central/source/mailnews/base/src/nsMessenger.cpp#718
then initialized by calling GetMessageServiceFromURI. But it is never released.

Reproducible: Always

Steps to Reproduce:
1. Just review the code
2. Or you can create a XPCOM test case that calls msIMessenger.SaveAttachment
3. Run the test case

Actual Results:  
If you run the XPCOM test case, a memory leak is reported.

Expected Results:  
The interface should be release when it is not needed any more.
Attached patch PatchSplinter Review
Attachment #420549 - Flags: superreview?(bienvenu)
Attachment #420549 - Flags: review?(bienvenu)
Comment on attachment 420549 [details] [diff] [review]
Patch

thx, Zane, I'll check this in.
Attachment #420549 - Flags: superreview?(bienvenu)
Attachment #420549 - Flags: superreview+
Attachment #420549 - Flags: review?(bienvenu)
Attachment #420549 - Flags: review+
Component: MailNews: General → Attachments
Product: SeaMonkey → MailNews Core
QA Contact: mail → attachments
Version: unspecified → Trunk
fix checked in.
Assignee: nobody → ZaneUJi
Status: UNCONFIRMED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.1a1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: