fix bug 538379, incorrect ref counting on msg service when saving attachments, r/sr=bienvenu